--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@ layout: blog
         <div class="hero-body hero-bd">
             <div class="container has-text-centered">
                 
-                <h1 class="title">"If you don't pay the price for success, you'll pay pay the price for failure"</h1>
+                <h1 class="title">"If you don't pay the price for success, you'll pay the price for failure"</h1>
                 <h1>This quote has changed my life forever. My only question is, will it be yours?</h1>
 
             </div>
