--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ layout: default
                                                      <i class="fas fa-book"></i>
                                                     </span>
                                                 </td>
-                                                <td>Build a News Application with Angular 6 & Material Design</td>
-                                                <td><a class="button is-small is-danger" href="https://medium.com/@rachidsakara/build-a-news-application-with-angular-6-and-material-design-78fe5583e13d" target="_blank">Open</a></td>
+                                                <td>Introduction to Onsen UI Framework for Building Hybrid and Mobile Apps</td>
+                                                <td><a class="button is-small is-danger" href="https://medium.com/@rachidsakara/introduction-to-onsen-ui-framework-for-building-hybrid-and-mobile-apps-4f0bff130fe0" target="_blank">Open</a></td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
