--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@ layout: blog
                             </div>
 
                             <div class="media-content has-text-centered">
-                                <p class="title article-title"><a href="https://medium.com/@rachidsakara/build-a-news-application-with-angular-6-and-material-design-78fe5583e13d">Build a News Application with Angular 6 & Material Design</a></p>
+                                <p class="title article-title"><a href="https://medium.com/@rachidsakara/introduction-to-onsen-ui-framework-for-building-hybrid-and-mobile-apps-4f0bff130fe0">Introduction to Onsen UI Framework for Building Hybrid and Mobile Apps</a></p>
                                 <div class="tags has-addons level-item">
                                     <span class="tag is-rounded is-info"><a href="https://twitter.com/rachid_sakara" target="_blank">@rachid_sakara</a></span>
                                     <span class="tag is-rounded">July 21, 2018</span>
@@ -36,8 +36,9 @@ layout: blog
                             </div>
                         </div>
                         <div class="content article-body">
-                            <p>In this tutorial you’ll go through the process of building a news application with the <a href="https://angular.io/" target="_blank">Angular 6</a> and <a href="https://material.angular.io/" target="_blank">Google's Material Design</a>, some showcases of Material Design implementation which will certainly help you make your future applications with Angular looks fascinating for both web browsers and mobile devices. </p>
-                            <p>Just for the record, the source code for this tutorial is available on <a href="https://github.com/rachidsakara/angular-news-application-with-material" target="_blank">GitHub</a>.</p>
+                            <p>What is Onsen UI Framework and what he has to do with Monaca? This is what we’re about to find out in this article.</p>
+                            <p>When it comes to developing Mobile applications, a lot of web developers complain about learning native’s languages for building their amazing app.</p>
+                            <p>And that because they are more expensive to work with, requiring a lot of experience, not the best for creating simple apps and they’re built for one specific platform.</p>
                         </div>
                     </div>
                 </div>
