--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ layout: default
                                                      <i class="fas fa-book"></i>
                                                     </span>
                                                 </td>
-                                                <td>Introduction to Onsen UI Framework for Building Hybrid and Mobile Apps</td>
+                                                <td>Introduction to Onsen UI Framework for Building ...</td>
                                                 <td><a class="button is-small is-danger" href="https://medium.com/@rachidsakara/introduction-to-onsen-ui-framework-for-building-hybrid-and-mobile-apps-4f0bff130fe0" target="_blank">Open</a></td>
                                             </tr>
                                             {% endfor %}
