--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ layout: default
                      <p>
                     <strong>{{ site.title }}</strong>
                      <br>
-                        Developer for web and mobile applications, author at <a class="button is-small is-danger is-rounded" href="https://www.smashingmagazine.com/author/rachid-sakara/" target="_blank">Smashing Magazine</a> and member of <a class="button is-small is-link is-rounded" href="https://tutsplus.com/authors/rachid-sakara" target="_blank">Tuts+</a> translation team. In the meantime, I'm starting a whole brand new career as freelance writer. Hopefully things go well this time! 
+                        Developer for web and mobile applications, author at <a class="button is-small is-link is-rounded" href="https://www.smashingmagazine.com/author/rachid-sakara/" target="_blank">Smashing Magazine</a> and member of <a class="button is-small is-link is-rounded" href="https://tutsplus.com/authors/rachid-sakara" target="_blank">Tuts+</a> translation team. In the meantime, I'm starting a whole brand new career as freelance writer. Hopefully things go well this time! 
                     </p>
                     <p>
-                            Also the founder of <a class="button is-small is-warning is-rounded" href="https://world-headlines.herokuapp.com/" target="_blank">World Headlines</a> website which was built using Python Framework called Django.
+                            Also the founder of <a class="button is-small is-link is-rounded" href="https://world-headlines.herokuapp.com/" target="_blank">World Headlines</a> website which was built using Python Framework called Django.
                     </p>
                 </div>
                 </div>
