--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ layout: default
                 </div>
                 <div class="media-content">
                 <div class="content">
-                    <p>
+                     <p>
                     <strong>{{ site.title }}</strong>
                      <br>
-                        Developer for web and mobile applications, author at <a class="button is-small is-link is-rounded" href="https://www.smashingmagazine.com/author/rachid-sakara/" target="_blank">Smashing Magazine</a> and member of <a class="button is-small is-link is-rounded" href="https://tutsplus.com/authors/rachid-sakara" target="_blank">Tuts+</a> translation team. In the meantime, I'm starting a whole brand new career as freelance writer. Hopefully things go well this time! 
+                        Developer for web and mobile applications, author at <a class="button is-small is-link is-rounded" href="https://www.smashingmagazine.com/author/rachid-sakara/" target="_blank">Smashing Magazine</a> and member of <a class="button is-small is-link is-rounded" href="https://tutsplus.com/authors/rachid-sakara" target="_blank">Tuts+</a> translation team. In the meantime, I'm starting a whole brand new career as freelance writer. 
                     </p>
                     <p>
                             Also the founder of <a class="button is-small is-link is-rounded" href="https://world-headlines.herokuapp.com/" target="_blank">World Headlines</a> website which was built using Python Framework called Django.
@@ -139,8 +139,8 @@ layout: default
                                                      <i class="fas fa-book"></i>
                                                     </span>
                                                 </td>
-                                                <td>Build a News Application with Angular 6 & Material Design</td>
-                                                <td><a class="button is-small is-danger" href="https://medium.com/@rachidsakara/build-a-news-application-with-angular-6-and-material-design-78fe5583e13d" target="_blank">Open</a></td>
+                                                <td>Introduction to Onsen UI Framework for Building ...</td>
+                                                <td><a class="button is-small is-danger" href="https://medium.com/@rachidsakara/introduction-to-onsen-ui-framework-for-building-hybrid-and-mobile-apps-4f0bff130fe0" target="_blank">Open</a></td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
