--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="section">
     <div class="container">
-          <div class="box">
+          <div class="box" data-aos="zoom-in" data-aos-easing="ease">
             <article class="media">
                 <div class="media-left">
                 <figure class="image is-128x128">
@@ -31,7 +31,7 @@ layout: default
 
        <div class="container">
                 <section class="info-tiles">
-                    <div class="tile is-ancestor has-text-centered">
+                    <div class="tile is-ancestor has-text-centered" data-aos="fade-right" data-aos-easing="ease">
                         <div class="tile is-parent">
                             <article class="tile is-child box">
                                 <p class="title">Website</p>
@@ -44,7 +44,7 @@ layout: default
                         </div>
 
                         <div class="tile is-parent">
-                            <article class="tile is-child box">
+                            <article class="tile is-child box" data-aos="zoom-in" data-aos-easing="ease">
                                 <p class="title">T-Shirt Store</p>
                                 <p class="subtitle">
                                     <a class="button is-rounded is-primary" href="https://teespring.com/stores/shop-shirts" target="_blank">
@@ -54,7 +54,7 @@ layout: default
                             </article>
                         </div>
                         <div class="tile is-parent">
-                            <article class="tile is-child box">
+                            <article class="tile is-child box" data-aos="zoom-in" data-aos-easing="ease">
                                 <p class="title">Medium Blog</p>
                                 <p class="subtitle">
                                     <a class="button is-rounded is-primary" href="https://medium.com/@rachidsakara" target="_blank">
@@ -64,7 +64,7 @@ layout: default
                             </article>
                         </div>
                         <div class="tile is-parent">
-                            <article class="tile is-child box">
+                            <article class="tile is-child box" data-aos="fade-left" data-aos-easing="ease">
                                 <p class="title">Arabic Blog</p>
                                 <p class="subtitle">
                                     <a class="button is-rounded is-primary" href="http://wd-digital.blogspot.com/" target="_blank">
@@ -81,7 +81,7 @@ layout: default
                 <hr>
                 <div class="columns articles">
                     <div class="column is-6">
-                        <div class="card events-card">
+                        <div class="card events-card" data-aos="zoom-in" data-aos-easing="ease">
                             <header class="card-header">
                                 <p class="card-header-title">
                                     Content Management System
@@ -91,7 +91,7 @@ layout: default
                                   </span>
 
                             </header>
-                            <div class="card-table">
+                            <div class="card-table" >
                                 <div class="content">
                                     <table class="table is-fullwidth is-striped">
                                         <tbody>
@@ -117,7 +117,7 @@ layout: default
                     </div>
 
                     <div class="column is-6">
-                        <div class="card events-card">
+                        <div class="card events-card" data-aos="zoom-in" data-aos-easing="ease">
                             <header class="card-header">
                                 <p class="card-header-title">
                                     Front-End Development
@@ -162,7 +162,7 @@ layout: default
 
                  <div class="columns articles">
                     <div class="column is-6">
-                        <div class="card events-card">
+                        <div class="card events-card" data-aos="zoom-in" data-aos-easing="ease">
                             <header class="card-header">
                                 <p class="card-header-title">
                                     Digital Marketing
@@ -195,7 +195,7 @@ layout: default
                     </div>
 
                     <div class="column is-6">
-                        <div class="card events-card">
+                        <div class="card events-card" data-aos="zoom-in" data-aos-easing="ease">
                             <header class="card-header">
                                 <p class="card-header-title">
                                     Python Security
